--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -17,7 +17,7 @@
 <main>
 <section>
 <p>Paragraph describing main even</p>
-<video>
+<video controls>
     <source src="promo.mp4" type="video/mp4">
 </video>
 </section>
