--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -60,7 +60,7 @@
     </main>
 
     <footer>
-        <p>&copy; Copyright TechCon 2024</p>
+        <p>@Copyright TechCon 2024</p>
     </footer>
 
 </body>
