--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -20,16 +20,16 @@
     </header>
 
     <main>
-        <section>
-            <h2>Contact Information</h2>
-            <p>If you have any questions, please reach out to us:</p>
-            <ul>
-                <li>Email: <a href="mailto:contact@techcon.com">contact@techcon.com</a></li>
-                <li>Follow us on social media:</li>
-                <li><a href="https://www.facebook.com/TechCon" target="_blank">Facebook</a></li>
-                <li><a href="https://twitter.com/TechCon" target="_blank">Twitter</a></li>
-            </ul>
-        </section>
+       <section>
+    <h2>Contact Information</h2>
+    <p>If you have any questions, please reach out to us:</p>
+    <ul>
+        <li>Email: <a href="mailto:email@example.com">email@example.com</a></li>
+        <li>Follow us on social media:</li>
+        <li><a href="https://www.facebook.com/TechCon" target="_blank">Facebook</a></li>
+        <li><a href="https://twitter.com/TechCon" target="_blank">Twitter</a></li>
+    </ul>
+</section>
 
         <section>
             <h2>Conference Venue</h2>
@@ -71,4 +71,5 @@
 
 </body>
 </html>
+
 
